--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,16 +8,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: ecom
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: 123456
-        ports:
-          - 5433:5432
-        options: --health-cmd="pg_isready -U root" --health-interval=10s --health-timeout=5s --health-retries=5
+    # services:
+    #   postgres:
+    #     image: postgres:latest
+    #     env:
+    #       POSTGRES_DB: ecom
+    #       POSTGRES_USER: root
+    #       POSTGRES_PASSWORD: 123456
+    #     ports:
+    #       - 5432:5432
+    #     options: --health-cmd="pg_isready -U root" --health-interval=10s --health-timeout=5s --health-retries=5
 
     steps:
       - name: Checkout Code
