--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -1,7 +1,18 @@
-PORT=3000
-DB_HOST=localhost
-DB_PORT=33066
-DB_USERNAME=root
-DB_PASSWORD=root
-DB_DATABASE=admin
-JWT_SECRET=2vTBU^9mQjaS*C5BYDTw+Jk2X8VA(v^keYFGBX6xDD3J&eh%&q2bQ)YCguI5sv(U
+JWT_KEY="secret"
+JWT_SECRET="2vTBU^9mQjaS*C5BYDTw+Jk2X8VA(v^keYFGBX6xDD3J&eh%&q2bQ)YCguI5sv(U"
+EXPIRESIN="3600"
+ORIGIN_CORS_PORT="3000"
+BASE_URL="https://nestjs-ecom-backend.onrender.com/api"
+PROFILE_PATH="uploads/profile"
+PRODUCTS_PATH="uploads/products"
+PRODUCTS_PAYMENT_PATH="uploads/payment"
+VIDEO_PATH="uploads/videos"
+# CORS_ORIGIN="http://localhost:3000"
+CORS_ORIGIN=https://nextjs-ecom-fontend.vercel.app
+
+PORT="1000"
+DB_HOST="ep-crimson-glitter-a55dohj9.us-east-2.aws.neon.tech"
+DB_PORT="5432"
+DB_USERNAME="neondb_owner"
+DB_PASSWORD="npg_jLhUE21Mqbnu"
+DB_DATABASE="neondb"
